Changed the implementation to listener mode